<resources>
    <string name="app_name">GistNotes</string>
    <string name="all_gists">All Gists</string>
    <string name="notes">Notes</string>
    <string name="all_in_one">All in one</string>
    <string name="description">Description</string>
    <string name="user">User</string>
    <string name="note">Note</string>
    <string name="url">Url</string>
    <string name="url_lable">Url:</string>
    <string name="forksurl_lable">ForksUrl:</string>
    <string name="forksurl">ForksUrl</string>
    <string name="commitsurl_label">CommitsUrl:</string>
    <string name="commitsurl">CommitsUrl</string>
    <string name="id_lable">ID</string>
    <string name="id">ID</string>
    <string name="gitpullurl_label">GitPullUrl</string>
    <string name="gitpullurl">GitPullUrl</string>
    <string name="gitpushurl_label">GitPushUrl</string>
    <string name="gitpushurl">GitPushUrl</string>
    <string name="htmlurl_label">HtmlUrl</string>
    <string name="htmlurl">HtmlUrl</string>
    <string name="files_label_rolled">Files ►</string>
    <string name="public_label">Public</string>
    <string name="files">Files</string>
    <string name="createdat_label">CreatedAt</string>
    <string name="createdat">CreatedAt</string>
    <string name="updatedat_label">UpdatedAt</string>
    <string name="updatedat">UpdatedAt</string>
    <string name="description_label">Description</string>
    <string name="comments_label">Comments</string>
    <string name="comments">Comments</string>
    <string name="user_label">User</string>
    <string name="commentsurl_label">CommentsUrl</string>
    <string name="commentsurl">CommentsUrl</string>
    <string name="truncated_label">Truncated</string>
    <string name="truncated">Truncated</string>
    <string name="filename">FileName</string>
    <string name="filesize">FileSize</string>
    <string name="tag_notes">tag2</string>
    <string name="tag_all_gists">tag1</string>
    <string name="message_about_the_empty_response">The server response is empty</string>
    <string name="name_of_filq">public-gists.txt</string>
    <string name="file_does_not_exist_or_an_error_occurred_while_reading">File does not exist or an error occurred while reading</string>
    <string name="Data_from_file_dp">Data from file:</string>
</resources>
