<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.samsung.gistnotes.controller.GistActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:scrollbars="vertical"
        android:orientation="vertical"
        android:id="@+id/llGist"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llForksUrl">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textSize="16sp"
                android:id="@+id/tvforksUrlLabel"
                android:hint="@string/forksurl_lable"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:id="@+id/tvForksUrl"
                android:text="@string/forksurl"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llCommitsUrl">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textSize="16sp"
                android:id="@+id/tvCommitsUrlLabel"
                android:hint="@string/commitsurl_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:id="@+id/tvCommitsUrl"
                android:text="@string/commitsurl"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llId">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textSize="16sp"
                android:id="@+id/tvIdLabel"
                android:hint="@string/id_lable"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:id="@+id/tvId"
                android:text="@string/id"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llGitPullUrl">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textSize="16sp"
                android:id="@+id/tvGitPullUrlLabel"
                android:hint="@string/gitpullurl_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:id="@+id/tvGitPullUrl"
                android:text="@string/gitpullurl"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llGitPushUrl">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textSize="16sp"
                android:id="@+id/tvGitPushUrlLabel"
                android:hint="@string/gitpushurl_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:id="@+id/tvGitPushUrl"
                android:text="@string/gitpushurl"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llHtmlUrl">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textSize="16sp"
                android:id="@+id/tvHtmlUrlLabel"
                android:hint="@string/htmlurl_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:id="@+id/tvHtmlUrl"
                android:text="@string/htmlurl"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llFiles"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/llPublic"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:textSize="16sp"
                    android:id="@+id/tvFilesLabel"
                    android:hint="@string/files_label_rolled"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:id="@+id/chbPublic"
                    android:text="@string/public_label"/>

            </LinearLayout>

            <ListView
                android:id="@+id/lvFiles"
                android:layout_width="276dp"
                android:layout_height="129dp"
                android:clickable="true"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llCreatedAt">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textSize="16sp"
                android:id="@+id/tvCreatedAtLabel"
                android:hint="@string/createdat_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:id="@+id/tvCreatedAt"
                android:text="@string/createdat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llUpdatedAt">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textSize="16sp"
                android:id="@+id/tvUpdatedAtLabel"
                android:hint="@string/updatedat_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:id="@+id/tvUpdatedAt"
                android:text="@string/updatedat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llDescription">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textSize="16sp"
                android:id="@+id/tvDescriptionLabel"
                android:hint="@string/description_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:id="@+id/tvDescription"
                android:text="@string/description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llComments">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textSize="16sp"
                android:id="@+id/tvCommentsLabel"
                android:hint="@string/comments_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:id="@+id/tvComments"
                android:text="@string/comments" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llUser">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textSize="16sp"
                android:id="@+id/tvUserLabel"
                android:hint="@string/user_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:id="@+id/tvUser"
                android:text="@string/user" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llCommentsUrl">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textSize="16sp"
                android:id="@+id/tvCommentsUrlLabel"
                android:hint="@string/commentsurl_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:id="@+id/tvCommentsUrl"
                android:text="@string/commentsurl" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llTruncated">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textSize="16sp"
                android:id="@+id/tvTruncatedLabel"
                android:hint="@string/truncated_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:id="@+id/tvTruncated"
                android:text="@string/truncated" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
